# pytest-quarantine

./: .appveyor.yml  .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pydocstyle  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  appveyor.yml  mkdocs.yml  pytest_quarantine.py  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
docs/: index.md
scripts/: check_version.py  clean_release.py
src/: .pydocstyle  pytest_quarantine.py
src/pytest_quarantine/: plugin.py
tests/: .pydocstyle  test_quarantine.py
