[metadata]
name = pytest_quarantine
description = A plugin for pytest to manage expected test failures
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bhrutledge/pytest-quarantine
author = Brian Rutledge
author_email = bhrutledge@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Testing
maintainer = Brian Rutledge
maintainer_email = bhrutledge@gmail.com

[options]
py_modules = pytest_quarantine
install_requires =
    pytest>=4.6
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
package_dir = =src
setup_requires =
    setuptools_scm

[options.entry_points]
pytest11 =
    quarantine = pytest_quarantine

[options.extras_require]
dev =
    pre-commit
    pydocstyle
    flake8
    black
    coverage

[bdist_wheel]
universal = 1
